<resources>
    <string name="app_name">OOPS project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_accou">

    Login Account
    </string>
    <string name="hello_welco">
    Hello, Welcome back to your account.
    </string>
    <string name="phone_no_">
    Phone no.
    </string>
    <string name="sign_in_wit">
    Sign in with google
    </string>
    <string name="no_register">
    No registered yet ? Create an account
    </string>
    <string name="general_not">
    General notifications
    </string>
    <string name="incident_up">
    Incident Update
    </string>
    <string name="app_updates">
    App Updates
    </string>
    <string name="settings">
    Settings
    </string>
</resources>